# src/modules/cars/useCases/uploadCarImages/UploadCarImagesController.ts
@@ -8,19 +8,19 @@ interface IFiles {
 
 class UploadCarImagesController {
     async handle(request: Request, response: Response): Promise<Response> {
-        const { id } = request.params
-        const images = request.files as IFiles[]
+      const { id } = request.params
+      const images = request.files as IFiles[]
 
-        const uploadCarImagesUseCase = container.resolve(UploadCarImagesUseCase)
+      const uploadCarImagesUseCase = container.resolve(UploadCarImagesUseCase)
 
-        const images_name = images.map((file) => file.filename)
+      const images_name = images.map((file) => file.filename)
 
-        await uploadCarImagesUseCase.execute({
-            car_id: id,
-            images_name
-        })
+      await uploadCarImagesUseCase.execute({
+        car_id: id,
+        images_name
+      })
 
-        return response.status(201).send()
+      return response.status(201).send()
     }
 }
 
